# Grobner-Shirshov-bases

./: .cproject  .gitignore  .project  CMakeLists.txt  Changelog  GrSh.sln  README  README.rst  build.sh
GrSh-GTest/: GTest  GrSh-GTest.cpp  GrSh-GTest.vcxproj  GrSh-GTest.vcxproj.filters  ReadMe.txt  stdafx.cpp  stdafx.h
Grobner-Shirshov/: Grobner-Shirshov.cpp  Grobner-Shirshov.sln  Grobner-Shirshov.vcxproj  Grobner-Shirshov.vcxproj.filters  ReadMe.txt  stdafx.cpp
Grobner-Shirshov-Bases/: Grobner-Shirshov-Bases.vcxproj  ReadMe.txt  stdafx.cpp
Grobner-Shishov/: Grobner-Shishov.sln  Grobner-Shishov.vcxproj  ReadMe.txt  stdafx.cpp
python/: a5.txt  compare_test.txt  compositions.txt  defining_relations.txt  gsdefining_relations.py  gsmonoms.py  monoms.py  monoms.txt  start.py  test.py
src/: GrobShirVersion.cpp.in  GrobShirVersion.h  Types.h  main.cpp
src/A5/: Generators.h
src/Generators/: a5.h
src/Groups/: a5.h
test/: main_test.cpp
